# VoiceBased_Ecomm

./: .gitignore  README.md  a.py  app.py  llm.py  main.py  prompt.txt  pyproject.toml  requirements.txt  retriever.py  stt.py  test_pipeline.py  tts.py
DataCleaning/: file.ipynb
Ingestion/: chroma.py
SessionMemory/: Conversation_memory.py  user_memory.py
postman/: Voice-Based-Ecomm.postman_collection.json
scripts/: start-local-ngrok.ps1
static/: app.js  index.html  styles.css
voice/: mic.py
